[gd_scene load_steps=12 format=3 uid="uid://dwuuyrcn6w80i"]

[ext_resource type="PackedScene" uid="uid://ck3whm0a2psc8" path="res://source/class/explosive/explosive.tscn" id="1_yl30u"]
[ext_resource type="Script" path="res://source/entity/weapon/bomb/contact_charge.gd" id="2_s2nct"]
[ext_resource type="Texture2D" uid="uid://3dj3410whfal" path="res://assets/textures/entities/grenade/smoke_particle.png" id="3_uqhyy"]
[ext_resource type="Material" uid="uid://cjaf6j885g6fv" path="res://assets/materials/entity/contact_charge/glowing_charge_material.tres" id="4_qbgdn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1otn5"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 1, 0.588235)
albedo_texture = ExtResource("3_uqhyy")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_s7lyp"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_uow3k"]
gradient = SubResource("Gradient_s7lyp")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kxclc"]
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_uow3k")

[sub_resource type="PlaneMesh" id="PlaneMesh_sw3xi"]
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="CylinderMesh" id="CylinderMesh_cdqu1"]
top_radius = 0.05
bottom_radius = 0.05
height = 0.1
radial_segments = 5
rings = 1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wr1rw"]
height = 0.1
radius = 0.05

[node name="contact_charge" instance=ExtResource("1_yl30u")]
script = ExtResource("2_s2nct")

[node name="killTimer" type="Timer" parent="." index="5"]
one_shot = true

[node name="explosionAudioPlayer" type="AudioStreamPlayer3D" parent="." index="6"]

[node name="GPUParticles3D" type="GPUParticles3D" parent="." index="7"]
material_override = SubResource("StandardMaterial3D_1otn5")
amount = 256
lifetime = 5.0
fixed_fps = 60
visibility_aabb = AABB(-256, -100, -256, 512, 100, 512)
process_material = SubResource("ParticleProcessMaterial_kxclc")
draw_pass_1 = SubResource("PlaneMesh_sw3xi")

[node name="OmniLight3D" type="OmniLight3D" parent="." index="8"]
light_color = Color(1, 0.419608, 0, 1)
light_cull_mask = 4294967293
shadow_enabled = true
omni_range = 30.0
omni_attenuation = 2.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="." index="9"]
material_override = ExtResource("4_qbgdn")
mesh = SubResource("CylinderMesh_cdqu1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="10"]
shape = SubResource("CylinderShape3D_wr1rw")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="traumaArea" to="." method="_on_trauma_area_body_entered"]
[connection signal="body_exited" from="traumaArea" to="." method="_on_trauma_area_body_exited"]
[connection signal="body_entered" from="damageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="body_exited" from="damageArea" to="." method="_on_damage_area_body_exited"]
[connection signal="timeout" from="killTimer" to="." method="_on_kill_timer_timeout"]
